# supabase-panel-example

./: .gitignore  pyproject.toml
app/: main.py
app/pages/: login.py
